--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "grunt-jsbeautifier": ""
   },
   "dependencies": {
-    "utils": "nathanfaucett/utils"
+    "utils": "nathanfaucett/utils",
+    "type": "nathanfaucett/type"
   }
 }
 
