--- a/package.json
+++ b/package.json
@@ -20,8 +20,21 @@
     "grunt-jsbeautifier": ""
   },
   "dependencies": {
-    "utils": "nathanfaucett/utils",
-    "type": "nathanfaucett/type"
+    "mixin": "nathanfaucett/mixin",
+    "is_empty": "nathanfaucett/is_empty",
+    "is_array": "nathanfaucett/is_array",
+    "is_undefined": "nathanfaucett/is_undefined",
+    "is_object": "nathanfaucett/is_object",
+    "is_function": "nathanfaucett/is_function",
+    "is_string": "nathanfaucett/is_string",
+    "is_number": "nathanfaucett/is_number",
+    "is_finite": "nathanfaucett/is_finite",
+    "is_null": "nathanfaucett/is_null",
+    "is_nan": "nathanfaucett/is_nan",
+    "is_date": "nathanfaucett/is_date",
+    "is_regexp": "nathanfaucett/is_regexp",
+    "is_integer": "nathanfaucett/is_integer",
+    "is_decimal": "nathanfaucett/is_decimal",
+    "is_boolean": "nathanfaucett/is_boolean"
   }
 }
-
